Ensured Filter and Sort starts out unexpanded on mobile/small screens. Implemented loading widget to display whilst awaiting server responses. Also cleaned up a few small styling aspects.

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -21,7 +21,8 @@ a {
 
 #load-more-button {
    margin: 10px auto 20px auto;
-   width: 400px;
+   max-width: 400px;
+   width: 100%;
 }
 
 .pager-comp {
